--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -1,76 +1,49 @@
-<!-- Header Component -->
 <header class="header">
     <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
         <div class="container">
             <a class="navbar-brand" href="{% url 'index' %}">
-                <h1 class="text-black">Asoniya</h1>
+                <h1>Asoniya</h1>
             </a>
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-toggle="collapse"
-                data-target="#navbarNav"
-            >
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
+                <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a
-                            class="nav-link text-black"
-                            href="{% url 'index' %}"
-                            >Home</a
-                        >
+                        <a class="nav-link text-black" href="{% url 'index' %}">Home</a>
                     </li>
-                    <li class="nav-item mx-2">
-                        <a
-                            class="nav-link text-black"
-                            href="{% url 'destinations' %}"
-                            >Destinations</a
-                        >
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="{% url 'destinations' %}">Destinations</a>
                     </li>
-                    <li class="nav-item mx-2">
-                        <a
-                            class="nav-link text-black"
-                            href="{% url 'accommodation' %}"
-                            >Accommodation</a
-                        >
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="{% url 'accommodation' %}">Accommodation</a>
                     </li>
-                    <li class="nav-item mx-2">
-                        <a
-                            class="nav-link text-black"
-                            href="{% url 'travel_agencies' %}"
-                            >Travel Agencies</a
-                        >
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="{% url 'travel_agencies' %}">Travel Agencies</a>
                     </li>
-                    <li class="nav-item mx-2">
-                        <a
-                            class="nav-link text-black"
-                            href="{% url 'car_rentals' %}"
-                            >Car Rentals</a
-                        >
+                    <li class="nav-item">
+                        <a class="nav-link text-black" href="{% url 'car_rentals' %}">Car Rentals</a>
                     </li>
-                    {% if user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link text-black" href="{% url 'profile' %}">Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-black" href="#" id="logout-link">Logout</a>
-                        </li>
-                    {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link text-black" href="{% url 'login' %}">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-black" href="{% url 'signup' %}">Sign Up</a>
-                        </li>
-                    {% endif %}
                 </ul>
+
+                <div class="navbar-nav auth-buttons">
+                    {% if user.is_authenticated %}
+                        <a class="nav-link text-black" href="{% url 'profile' %}">Profile</a>
+                        <a href="#" id="logout-link" class="btn btn-dark nav-btn">Logout</a>
+                    {% else %}
+                        <a href="{% url 'login' %}" class="nav-link text-black">Login</a>
+                        <a href="{% url 'signup' %}" class="btn btn-dark nav-btn">Sign Up</a>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </nav>
 </header>
+
 <script>
+    // This script ensures your logout functionality continues to work
     document.addEventListener('DOMContentLoaded', function() {
         const logoutLink = document.getElementById('logout-link');
         if (logoutLink) {
@@ -78,7 +51,7 @@
                 e.preventDefault();
                 fetch('/api/logout/', {
                     method: 'POST',
-                    headers: {'X-CSRFToken': '{{ csrf_token }}'} // Important for security
+                    headers: { 'X-CSRFToken': getCookie('csrftoken') }
                 })
                 .then(response => response.json())
                 .then(data => {
@@ -88,5 +61,21 @@
                 });
             });
         }
+        
+        // Helper function to get CSRF token
+        function getCookie(name) {
+            let cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                const cookies = document.cookie.split(';');
+                for (let i = 0; i < cookies.length; i++) {
+                    const cookie = cookies[i].trim();
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
     });
-    </script>
+</script>
