--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container py-5">
     <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-12 col-md-6">
             <h2 class="text-center mb-4">Create an Account</h2>
             <div id="error-message" class="alert alert-danger" style="display: none;"></div>
             <form id="signup-form">
