--- a/templates/destination_detail.html
+++ b/templates/destination_detail.html
@@ -81,7 +81,7 @@
         <h2 class="section-title text-center mb-5">Attractions in {{ destination.name }}</h2>
         <div class="row">
             {% for attraction in destination.attractions.all %}
-            <div class="col-6 col-md-4 col-lg-3 mb-4">
+            <div class="col-md-6 col-lg-4 mb-4">
                 <div class="card attraction-card h-100 shadow-sm">
                     <img src="{{ attraction.image.url }}" class="card-img-top" alt="{{ attraction.name }}">
                     <div class="card-body d-flex flex-column">
