--- a/templates/index.html
+++ b/templates/index.html
@@ -65,13 +65,13 @@
                 <p>Everything you need to know before your Ethiopian adventure</p>
             </div>
             <div class="row">
-                <div class="col-12 col-md-6">
+                <div class="col-md-6">
                     <div class="info-box">
                         <h3><i class="fas fa-globe-africa mr-2"></i> About Ethiopia</h3>
                         <p>Ethiopia is a land of ancient history, stunning landscapes, and vibrant cultures. It boasts unique tourist attractions such as the rock-hewn churches of Lalibela, the Simien Mountains, and the historical city of Axum.</p>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
+                <div class="col-md-6">
                     <div class="info-box">
                         <h3><i class="fas fa-passport mr-2"></i> Legal, Medical & Visa Requirements</h3>
                         <p>Visitors must obtain a visa before arrival or on arrival for eligible nationalities. Ensure vaccinations for yellow fever and other necessary health precautions.</p>
@@ -79,13 +79,13 @@
                 </div>
             </div>
             <div class="row mt-4">
-                <div class="col-12 col-md-6">
+                <div class="col-md-6">
                     <div class="info-box">
                         <h3><i class="fas fa-money-bill-wave mr-2"></i> Current Exchange Rates</h3>
                         <p>The Ethiopian currency is the Ethiopian Birr (ETB). Check with local banks for the latest exchange rates.</p>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
+                <div class="col-md-6">
                     <div class="info-box">
                         <h3><i class="fas fa-first-aid mr-2"></i> Emergency Information</h3>
                         <ul class="list-unstyled">
@@ -108,7 +108,7 @@
                 <p>We're here to make your Ethiopian journey unforgettable</p>
             </div>
             <div class="row">
-                <div class="col-12 col-md-4">
+                <div class="col-md-4">
                     <div class="service-box">
                         <div class="icon">
                             <i class="fas fa-route"></i>
@@ -117,7 +117,7 @@
                         <p>We create personalized itineraries to match your travel dreams and preferences, ensuring you experience the best of Ethiopia.</p>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-md-4">
                     <div class="service-box">
                         <div class="icon">
                             <i class="fas fa-hotel"></i>
@@ -126,7 +126,7 @@
                         <p>Find the best hotels and lodges to suit your budget, from luxury resorts to authentic guest houses across Ethiopia.</p>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-md-4">
                     <div class="service-box">
                         <div class="icon">
                             <i class="fas fa-map-marked-alt"></i>
