--- a/templates/travel_agency_detail.html
+++ b/templates/travel_agency_detail.html
@@ -61,8 +61,8 @@
 
 <div class="container py-5">
     <div class="main-content">
-        <div class="row detail-page-row">
-            <div class="col-lg-7 order-2 order-lg-1">
+        <div class="row">
+            <div class="col-lg-7">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb bg-transparent p-0 mb-2">
                         <li class="breadcrumb-item"><a href="{% url 'travel_agencies' %}">Travel Agencies</a></li>
@@ -78,7 +78,7 @@
                 <h3 class="mb-4">Available Tour Packages</h3>
                 <div class="row">
                     {% for tour in agency.tours.all %}
-                    <div class="col-6 col-md-4 col-lg-3 mb-4">
+                    <div class="col-md-6 mb-4">
                         <div class="card tour-card h-100">
                             <img src="{{ tour.image.url }}" class="card-img-top" alt="{{ tour.name }}">
                             <div class="card-body d-flex flex-column">
@@ -98,7 +98,7 @@
                 </div>
             </div>
 
-            <div class="col-lg-5 order-1 order-lg-2">
+            <div class="col-lg-5">
                 <div class="sticky-top gallery-sticky-top">
                     <img src="{{ agency.image.url }}" class="gallery-main" id="main-image" alt="{{ agency.name }}">
                     <div class="gallery-thumbnails">
