--- a/templates/car-rentals.html
+++ b/templates/car-rentals.html
@@ -69,12 +69,12 @@
                     data.forEach(company => {
                         const detailUrl = `/car-rentals/${company.id}/`;
                         const card = `
-                            <div class="col-6 col-md-4 col-lg-3 mb-4">
+                            <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="card h-100">
                                     <img src="${company.image_url || '{% static "images/placeholder.jpg" %}'}" class="card-img-top" alt="${company.name}">
                                     <div class="card-body d-flex flex-column">
                                         <h5 class="card-title">${company.name}</h5>
-                                        <p class="card-text flex-grow-1 text-truncate-3">${company.description}</p>
+                                        <p class="card-text flex-grow-1">${company.description}</p>
                                         <a href="${detailUrl}" class="btn btn-primary mt-auto">View Details</a>
                                     </div>
                                 </div>
