--- a/templates/travel-agencies.html
+++ b/templates/travel-agencies.html
@@ -57,7 +57,7 @@
                     data.forEach(agency => {
                         const detailUrl = `/travel-agencies/${agency.id}/`;
                         const card = `
-                            <div class="col-6 col-md-4 col-lg-3 mb-4">
+                            <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="card h-100">
                                     <img src="${agency.image_url || '{% static "images/placeholder.jpg" %}'}" class="card-img-top" alt="${agency.name}">
                                     <div class="card-body d-flex flex-column">
